Define a new column order and rearrange DataFrame according to the new order.

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "33 duplicate rows were removed.\n"
+      "91 duplicate rows were removed.\n"
      ]
     }
    ],
@@ -79,6 +79,12 @@
     "\n",
     "# Remove duplicates considering specified columns.\n",
     "df.drop_duplicates(subset=['title', 'square_meters', 'rooms', 'parking', 'baths'], inplace=True)\n",
+    "\n",
+    "# Filter DataFrame to remove rows where square_meters < 40.\n",
+    "df = df[df['square_meters'] >= 40]\n",
+    "\n",
+    "# Resetear los índices\n",
+    "df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "# Count rows number after removing duplicates.\n",
     "final_count = df.shape[0]\n",
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,12 +122,12 @@
     "        return None  # Or handle another way if it is not in the expected format\n",
     "\n",
     "# Apply function and create a new column 'price_in_quetzales'\n",
-    "df['price_in_quetzales'] = df['price'].apply(convert_price)"
+    "df['price_quetzales'] = df['price'].apply(convert_price)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,202 +142,26 @@
     "        return unidecode.unidecode(text.strip())\n",
     "    return ''  # Return empty string if not a string.\n",
     "\n",
-    "# Normalize titles\n",
-    "df['normalized_title'] = df['title'].apply(normalize_text)\n",
-    "# Normalize titles\n",
-    "df['normalized_description'] = df['adv_description'].apply(normalize_text)"
+    "# Normalize titles.\n",
+    "df['title_normalized'] = df['title'].apply(normalize_text)\n",
+    "# Normalize description.\n",
+    "df['description_normalized'] = df['adv_description'].apply(normalize_text)\n",
+    "# Normalize location.\n",
+    "df['location_normalized'] = df['location'].apply(normalize_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "# 8) Define a new column order.\n",
+    "new_order = ['title_normalized', 'price_quetzales','square_meters', 'rooms', 'parking', 'baths', 'location_normalized', 'description_normalized']\n",
+    "\n",
+    "# Rearrange DataFrame according to the new order.\n",
+    "df = df[new_order]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>price</th>\n",
-       "      <th>square_meters</th>\n",
-       "      <th>rooms</th>\n",
-       "      <th>parking</th>\n",
-       "      <th>baths</th>\n",
-       "      <th>location</th>\n",
-       "      <th>img_url</th>\n",
-       "      <th>url</th>\n",
-       "      <th>adv_description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Casas en venta</td>\n",
-       "      <td>['Q965,000']</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Villa Canales</td>\n",
-       "      <td>https://photos.encuentra24.com/t_or_fh_m/f_aut...</td>\n",
-       "      <td>https://www.encuentra24.com/guatemala-es/biene...</td>\n",
-       "      <td>Se venden bonitas casas en Altos de Village ki...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Venta apartamento zona 10</td>\n",
-       "      <td>['Q560,000']</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Zona 10</td>\n",
-       "      <td>https://photos.encuentra24.com/t_or_fh_m/f_aut...</td>\n",
-       "      <td>https://www.encuentra24.com/guatemala-es/biene...</td>\n",
-       "      <td>Precio de venta: Q.560,000   Mantenimiento: Q....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Casa en venta el Residenciales Lo de Valdez</td>\n",
-       "      <td>['Q1,200,000']</td>\n",
-       "      <td>320.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>San José Pinula</td>\n",
-       "      <td>https://photos.encuentra24.com/t_or_fh_m/f_aut...</td>\n",
-       "      <td>https://www.encuentra24.com/guatemala-es/biene...</td>\n",
-       "      <td>Casa en venta Residenciales A lo de Valdez, km...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Vendo Casa para estrenar 4 habitaciones km 14...</td>\n",
-       "      <td>['$229,000']</td>\n",
-       "      <td>256.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Santa Catarina Pinula</td>\n",
-       "      <td>https://photos.encuentra24.com/t_or_fh_m/f_aut...</td>\n",
-       "      <td>https://www.encuentra24.com/guatemala-es/biene...</td>\n",
-       "      <td>Preciosas Casa de 4 Habitaciones en desniveles...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Apartamentos en venta Cendana zona 9</td>\n",
-       "      <td>['Q1,159,541']</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Zona 9</td>\n",
-       "      <td>https://photos.encuentra24.com/t_or_fh_m/f_aut...</td>\n",
-       "      <td>https://www.encuentra24.com/guatemala-es/biene...</td>\n",
-       "      <td>Apartamentos en venta de 1 y 2 habitaciones, C...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title           price  \\\n",
-       "0                                     Casas en venta    ['Q965,000']   \n",
-       "1                          Venta apartamento zona 10    ['Q560,000']   \n",
-       "2        Casa en venta el Residenciales Lo de Valdez  ['Q1,200,000']   \n",
-       "3   Vendo Casa para estrenar 4 habitaciones km 14...    ['$229,000']   \n",
-       "4               Apartamentos en venta Cendana zona 9  ['Q1,159,541']   \n",
-       "\n",
-       "   square_meters  rooms  parking  baths               location  \\\n",
-       "0          138.0    3.0      2.0    3.0          Villa Canales   \n",
-       "1           23.0    1.0      NaN    1.0                Zona 10   \n",
-       "2          320.0    4.0      3.0    3.0        San José Pinula   \n",
-       "3          256.0    4.0      2.0    3.0  Santa Catarina Pinula   \n",
-       "4           77.0    2.0      1.0    2.0                 Zona 9   \n",
-       "\n",
-       "                                             img_url  \\\n",
-       "0  https://photos.encuentra24.com/t_or_fh_m/f_aut...   \n",
-       "1  https://photos.encuentra24.com/t_or_fh_m/f_aut...   \n",
-       "2  https://photos.encuentra24.com/t_or_fh_m/f_aut...   \n",
-       "3  https://photos.encuentra24.com/t_or_fh_m/f_aut...   \n",
-       "4  https://photos.encuentra24.com/t_or_fh_m/f_aut...   \n",
-       "\n",
-       "                                                 url  \\\n",
-       "0  https://www.encuentra24.com/guatemala-es/biene...   \n",
-       "1  https://www.encuentra24.com/guatemala-es/biene...   \n",
-       "2  https://www.encuentra24.com/guatemala-es/biene...   \n",
-       "3  https://www.encuentra24.com/guatemala-es/biene...   \n",
-       "4  https://www.encuentra24.com/guatemala-es/biene...   \n",
-       "\n",
-       "                                     adv_description  \n",
-       "0  Se venden bonitas casas en Altos de Village ki...  \n",
-       "1  Precio de venta: Q.560,000   Mantenimiento: Q....  \n",
-       "2  Casa en venta Residenciales A lo de Valdez, km...  \n",
-       "3  Preciosas Casa de 4 Habitaciones en desniveles...  \n",
-       "4  Apartamentos en venta de 1 y 2 habitaciones, C...  "
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
