Save Clean Data.

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -13,17 +13,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1) Upload CSV file containing scraped raw data (web_scraping.ipynb)\n",
-    "df = pd.read_csv(r'C:\\Users\\DAV\\Documents\\Python\\Python_Project\\House_price_project\\data\\raw\\8_1_2024.csv')"
+    "# 1) Upload CSV file containing scraped raw data (web_scraping.ipynb).\n",
+    "\n",
+    "# Specifies directory path where CSV file is located.\n",
+    "directory = 'C:/Users/DAV/Documents/Python/Python_Project/House_price_project/data/raw/'\n",
+    "\n",
+    "# Define file name.\n",
+    "filename = '8_1_2024.csv'  \n",
+    "\n",
+    "# Build full file path.\n",
+    "file_path = directory + filename\n",
+    "\n",
+    "# Upload the CSV file using constructed path.\n",
+    "df = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "91 duplicate rows were removed.\n"
+      "33 duplicate rows were removed.\n"
      ]
     }
    ],
@@ -79,9 +90,6 @@
     "\n",
     "# Remove duplicates considering specified columns.\n",
     "df.drop_duplicates(subset=['title', 'square_meters', 'rooms', 'parking', 'baths'], inplace=True)\n",
-    "\n",
-    "# Filter DataFrame to remove rows where square_meters < 40.\n",
-    "df = df[df['square_meters'] >= 40]\n",
     "\n",
     "# Resetear los índices\n",
     "df.reset_index(drop=True, inplace=True)\n",
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,10 +173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Specify directory path.\n",
+    "directory = 'C:\\\\Users\\\\DAV\\\\Documents\\\\Python\\\\Python_Project\\\\House_price_project\\\\data\\\\clean\\\\'\n",
+    "\n",
+    "# Define the file name.\n",
+    "filename = '8_3.csv'\n",
+    "\n",
+    "# Build full file path.\n",
+    "output_path = directory + filename\n",
+    "\n",
+    "# Save DataFrame to an CSV file in the specified directory.\n",
+    "df.to_csv(output_path, index=True)"
+   ]
   },
   {
    "cell_type": "code",
