Save Clean Data.

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -177,11 +177,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 9) Save Clean Data.\n",
     "# Specify directory path.\n",
     "directory = 'C:\\\\Users\\\\DAV\\\\Documents\\\\Python\\\\Python_Project\\\\House_price_project\\\\data\\\\clean\\\\'\n",
     "\n",
     "# Define the file name.\n",
-    "filename = '8_3.csv'\n",
+    "filename = '8_3_2024.csv'\n",
     "\n",
     "# Build full file path.\n",
     "output_path = directory + filename\n",
