Fix 'Save cleaned DataFrame'

--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -359,11 +359,11 @@
     "# Specify directory path.\n",
     "directory = 'C:\\\\Users\\\\DAV\\\\Documents\\\\Python\\\\Python_Project\\\\House_price_project\\\\data\\\\raw\\\\'\n",
     "# Define the file name.\n",
-    "filename = 'raw-data.xlsx'\n",
+    "filename = 'raw-data.csv'\n",
     "# Build full file path.\n",
     "output_path = directory + filename\n",
     "# Export DataFrame `df` to an CSV file named 'raw.csv' \n",
-    "df.to_excel(output_path,index=False)"
+    "df.to_csv(output_path,index=False)"
    ]
   },
   {
@@ -371,12 +371,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 13) Save DataFrame to an Excel file with Raw Data.\n",
-    "\n",
-    "# Export DataFrame `df` to an Excel file named 'date.xlsx' \n",
-    "df.to_excel('8_1_2024.xlsx')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
