Fix 'data_cleaning' file (Save pre-clean dataframe).

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -23,7 +23,7 @@
     "directory = 'C:/Users/DAV/Documents/Python/Python_Project/House_price_project/data/raw/'\n",
     "\n",
     "# Define file name.\n",
-    "filename = '8_1_2024.csv'  \n",
+    "filename = 'raw-data.csv'  \n",
     "\n",
     "# Build full file path.\n",
     "file_path = directory + filename\n",
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
