Delete rows containing less than 40 square meters.

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -91,7 +91,7 @@
     "# Remove duplicates considering specified columns.\n",
     "df.drop_duplicates(subset=['title', 'square_meters', 'rooms', 'parking', 'baths'], inplace=True)\n",
     "\n",
-    "# Resetear los índices\n",
+    "# Reset index.\n",
     "df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "# Count rows number after removing duplicates.\n",
@@ -108,9 +108,40 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "58 duplicate rows were removed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6) Delete rows containing less than 40 square meters.\n",
+    "\n",
+    "#  Count rows number before removing duplicates.\n",
+    "initial_count = df.shape[0]\n",
+    "# Filter rows.\n",
+    "df = df[df['square_meters'] >= 40]\n",
+    "# Reset index.\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "# Count rows number after removing duplicates.\n",
+    "final_count = df.shape[0]\n",
+    "# Calculate how many rows were deleted.\n",
+    "removed_count = initial_count - final_count\n",
+    "# Message about how many rows were deleted.\n",
+    "print(f\"\\n{removed_count} duplicate rows were removed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 6) Convert price to integer, removing symbols (\"[ ]\",\",\"$\",\"Q\") and applying a conversion rate.\n",
+    "# 7) Convert price to integer, removing symbols (\"[ ]\",\",\"$\",\"Q\") and applying a conversion rate.\n",
     "\n",
     "# Define conversion rate ($ to Q).\n",
     "conversion_rate = 7.8\n",
@@ -139,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7) Normalize text function.\n",
+    "# 8) Normalize text function.\n",
     "def normalize_text(text):\n",
     "    if isinstance(text, str):\n",
     "        text = re.sub(r\"[.,|()*!-/•:]\", \" \", text)  # Replace \".\", \",\" and \"|\", etc. for space.\n",
@@ -164,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8) Define a new column order.\n",
+    "# 9) Define a new column order.\n",
     "new_order = ['title_normalized', 'price_quetzales','square_meters', 'rooms', 'parking', 'baths', 'location_normalized', 'description_normalized']\n",
     "\n",
     "# Rearrange DataFrame according to the new order.\n",
@@ -177,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 9) Save Clean Data.\n",
+    "# 10) Save Clean Data.\n",
     "# Specify directory path.\n",
     "directory = 'C:\\\\Users\\\\DAV\\\\Documents\\\\Python\\\\Python_Project\\\\House_price_project\\\\data\\\\raw\\\\'\n",
     "\n",
